#17: add main page dimgem, create base views of dim and gem - ugly

--- a/dimgem/templates/dim.html
+++ b/dimgem/templates/dim.html
@@ -6,7 +6,7 @@
 {% block menu5 %}<a href="{% url 'false_friends1' %}">False friends</a>{% endblock %}
 {% block menu6 %}<a href="{% url 'search' %}">Szukaj</a>{% endblock %}
 {% block menu7 %}<a href="{% url 'contact' %}">Kontakt</a>{% endblock %}
-{% block menu8 %}<a href="{% url 'home2' %}">GEM</a>{% endblock %}
+{% block menu8 %}<a href="{% url 'gem' %}">GEM</a>{% endblock %}
 {% block content %}
     <h2>DIM - Dorothy's Italian Manual</h2>
     <ul>
