--- a/dimgem/templates/gem.html
+++ b/dimgem/templates/gem.html
@@ -6,7 +6,7 @@
 {% block menu5 %}<a href="{% url 'false_friends2' %}">False friends</a>{% endblock %}
 {% block menu6 %}<a href="{% url 'search' %}">Szukaj</a>{% endblock %}
 {% block menu7 %}<a href="{% url 'contact' %}">Kontakt</a>{% endblock %}
-{% block menu8 %}<a href="{% url 'home1' %}">DIM</a>{% endblock %}
+{% block menu8 %}<a href="{% url 'dim' %}">DIM</a>{% endblock %}
 {% block content %}
     <h2>GEM - George's English Manual</h2>
     <ul>
