--- a/dimgem/templates/dim.html
+++ b/dimgem/templates/dim.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block menu1 %}DIM{% endblock %}
-{% block menu2 %}<a href="{% url 'gramma1' %}">Gramatyka</a>{% endblock %}
+{% block menu2 %}<a href="{% url 'dim_grammar' %}">Gramatyka</a>{% endblock %}
 {% block menu3 %}<a href="{% url 'vocabulary1' %}">Słownictwo</a>{% endblock %}
 {% block menu4 %}<a href="{% url 'curiosity1' %}">Ciekawostki</a>{% endblock %}
 {% block menu5 %}<a href="{% url 'false_friends1' %}">False friends</a>{% endblock %}
