#17: change vocabulary part in templates and urls

--- a/dimgem/templates/gramatyka.html
+++ b/dimgem/templates/gramatyka.html
@@ -11,9 +11,9 @@
 {% endblock %}
 {% block menu3 %}
     {% if page == 'dim' %}
-        <a href="{% url 'vocabulary1' %}">Słownictwo</a>
+        <a href="{% url 'dim_vocabulary' %}">Słownictwo</a>
     {% else %}
-        <a href="{% url 'vocabulary2' %}">Słownictwo</a>
+        <a href="{% url 'gem_vocabulary' %}">Słownictwo</a>
     {% endif %}
 {% endblock %}
 {% block menu4 %}
