--- a/dimgem/templates/gem.html
+++ b/dimgem/templates/gem.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block menu1 %}GEM{% endblock %}
 {% block menu2 %}<a href="{% url 'gem_grammar' %}">Gramatyka</a>{% endblock %}
-{% block menu3 %}<a href="{% url 'vocabulary2' %}">Słownictwo</a>{% endblock %}
+{% block menu3 %}<a href="{% url 'gem_vocabulary' %}">Słownictwo</a>{% endblock %}
 {% block menu4 %}<a href="{% url 'curiosity2' %}">Ciekawostki</a>{% endblock %}
 {% block menu5 %}<a href="{% url 'false_friends2' %}">False friends</a>{% endblock %}
 {% block menu6 %}<a href="{% url 'search' %}">Szukaj</a>{% endblock %}
