--- a/dimgem/templates/gem.html
+++ b/dimgem/templates/gem.html
@@ -2,7 +2,7 @@
 {% block menu1 %}GEM{% endblock %}
 {% block menu2 %}<a href="{% url 'gem_grammar' %}">Gramatyka</a>{% endblock %}
 {% block menu3 %}<a href="{% url 'gem_vocabulary' %}">Słownictwo</a>{% endblock %}
-{% block menu4 %}<a href="{% url 'curiosity2' %}">Ciekawostki</a>{% endblock %}
+{% block menu4 %}<a href="{% url 'gem_curiosities' %}">Ciekawostki</a>{% endblock %}
 {% block menu5 %}<a href="{% url 'false_friends2' %}">False friends</a>{% endblock %}
 {% block menu6 %}<a href="{% url 'search' %}">Szukaj</a>{% endblock %}
 {% block menu7 %}<a href="{% url 'contact' %}">Kontakt</a>{% endblock %}
