--- a/dimgem/templates/gramatyka.html
+++ b/dimgem/templates/gramatyka.html
@@ -18,9 +18,9 @@
 {% endblock %}
 {% block menu4 %}
     {% if page == 'dim' %}
-        <a href="{% url 'curiosity1' %}">Ciekawostki</a>
+        <a href="{% url 'dim_curiosities' %}">Ciekawostki</a>
     {% else %}
-        <a href="{% url 'curiosity2' %}">Ciekawostki</a>
+        <a href="{% url 'gem_curiosities' %}">Ciekawostki</a>
     {% endif %}
 {% endblock %}
 {% block menu5 %}
