--- a/dimgem/templates/dim.html
+++ b/dimgem/templates/dim.html
@@ -2,7 +2,7 @@
 {% block menu1 %}DIM{% endblock %}
 {% block menu2 %}<a href="{% url 'dim_grammar' %}">Gramatyka</a>{% endblock %}
 {% block menu3 %}<a href="{% url 'dim_vocabulary' %}">Słownictwo</a>{% endblock %}
-{% block menu4 %}<a href="{% url 'curiosity1' %}">Ciekawostki</a>{% endblock %}
+{% block menu4 %}<a href="{% url 'dim_curiosities' %}">Ciekawostki</a>{% endblock %}
 {% block menu5 %}<a href="{% url 'false_friends1' %}">False friends</a>{% endblock %}
 {% block menu6 %}<a href="{% url 'search' %}">Szukaj</a>{% endblock %}
 {% block menu7 %}<a href="{% url 'contact' %}">Kontakt</a>{% endblock %}
