#17: change false_friends part in templates and urls

--- a/dimgem/templates/gramatyka.html
+++ b/dimgem/templates/gramatyka.html
@@ -25,9 +25,9 @@
 {% endblock %}
 {% block menu5 %}
     {% if page == 'dim' %}
-        <a href="{% url 'false_friends1' %}">False friends</a>
+        <a href="{% url 'dim_false_friends' %}">False friends</a>
     {% else %}
-        <a href="{% url 'false_friends2' %}">False friends</a>
+        <a href="{% url 'gem_false_friends' %}">False friends</a>
     {% endif %}
 {% endblock %}
 {% block menu6 %}<a href="{% url 'search' %}">Szukaj</a>{% endblock %}
