--- a/dimgem/templates/gem.html
+++ b/dimgem/templates/gem.html
@@ -3,7 +3,7 @@
 {% block menu2 %}<a href="{% url 'gem_grammar' %}">Gramatyka</a>{% endblock %}
 {% block menu3 %}<a href="{% url 'gem_vocabulary' %}">Słownictwo</a>{% endblock %}
 {% block menu4 %}<a href="{% url 'gem_curiosities' %}">Ciekawostki</a>{% endblock %}
-{% block menu5 %}<a href="{% url 'false_friends2' %}">False friends</a>{% endblock %}
+{% block menu5 %}<a href="{% url 'gem_false_friends' %}">False friends</a>{% endblock %}
 {% block menu6 %}<a href="{% url 'search' %}">Szukaj</a>{% endblock %}
 {% block menu7 %}<a href="{% url 'contact' %}">Kontakt</a>{% endblock %}
 {% block menu8 %}<a href="{% url 'dim' %}">DIM</a>{% endblock %}
