--- a/dimgem/templates/ciekawostki.html
+++ b/dimgem/templates/ciekawostki.html
@@ -48,7 +48,7 @@
             <h4 style="color: darkgreen">{{post.posted_date|date:"d.m.Y"}} {{post.author}}: {{post.title}}</h4>
             {{post.text|linebreaks}}
             {% if post.picture %}
-                <img src="{{ post.picture.name|slice:'6:' }}" style="width: 400px; height: 300px" alt="{{ post.picture.name }}" />
+                <img src="{{ MEDIA_URL }}{{ post.picture.name }}" style="width: 400px; height: 300px" alt="{{ post.picture.name }}" />
             {% endif %}
             {% load static from staticfiles %}
             {% if page == 'dim' %}
