#4: remove alt from img

--- a/dimgem/templates/base.html
+++ b/dimgem/templates/base.html
@@ -16,7 +16,7 @@
     <div id="baner" align="center">
         {% block baner %}
             {% load static from staticfiles %}
-            <img src="{% static 'dimgem/banerdimgem.jpg' %}" alt="My image"
+            <img src="{% static 'dimgem/banerdimgem.jpg' %}"
                  style="border-radius: 40px; box-shadow: 0 0 7px black;"/>
         {% endblock %}
     </div>
