--- a/dimgem/templates/dim.html
+++ b/dimgem/templates/dim.html
@@ -18,11 +18,11 @@
             </h4>
             <p>{{post.text|linebreaks}}</p>
             {% load static from staticfiles %}
-                <a href="{% url 'dim' %}?post-id={{ post.id }}&vote=1"><img src="{% static 'dimgem/StarHappy.png' %}" alt="My image" /></a> Podoba mi się
-                <a href="{% url 'dim' %}?post-id={{ post.id }}&vote=0"><img src="{% static 'dimgem/StarSad.png' %}" alt="My image" /></a> Nie podoba mi się
+                <a href="{% url 'dim' %}?post-id={{ post.id }}&vote=1"><img src="{% static 'dimgem/StarHappy.png' %}" /></a> Podoba mi się
+                <a href="{% url 'dim' %}?post-id={{ post.id }}&vote=0"><img src="{% static 'dimgem/StarSad.png' %}" /></a> Nie podoba mi się
                 &nbsp;&nbsp;&nbsp;&nbsp;Wyniki:&nbsp;&nbsp;
-                {{ post.votes_up }} x <img src="{% static 'dimgem/StarHappy.png' %}" alt="My image" />
-                {{ post.votes_down }} x <img src="{% static 'dimgem/StarSad.png' %}" alt="My image" />
+                {{ post.votes_up }} x <img src="{% static 'dimgem/StarHappy.png' %}" />
+                {{ post.votes_down }} x <img src="{% static 'dimgem/StarSad.png' %}" />
                 {% if votes %}
                     {% if votes.post_id == post.id and votes.vote == False %}
                         Ha! Nie oszukuj, już głosował(a/e)ś!
