--- a/dimgem/static/css/style.css
+++ b/dimgem/static/css/style.css
@@ -7,38 +7,35 @@ a {
     font-family: Tahoma, Geneva, sans-serif;
 }
 .menu {
-    /*width: 100%;*/
-    /*height: 35px;*/
-    /*font: bold 16px Tahoma, Sans-Serif;*/
+    width: 900px;
+    height: 70px;
     text-align: center;
-    /*background-color: darkgreen;*/
-    /*border-radius: 20px;*/
-    /*color: white;*/
-    /*box-shadow: 0 0 7px black;*/
-}
-/*#menu ul {*/
-    /*height: auto;*/
-    /*padding: 8px 0px;*/
-    /*margin: 0px;*/
-/*}*/
-/*#menu li {*/
-    /*display: inline;*/
-    /*padding: 20px;*/
-/*}*/
-/*#menu a {*/
-    /*color: white;*/
-/*}*/
-
-.ui-tooltip {
-    padding: 10px 20px;
-    background: darkgreen;
-    color: white;
-    border-radius: 20px;
-    font: bold 14px Tahoma, Sans-Serif;
-    text-transform: uppercase;
+    border-radius: 40px;
     box-shadow: 0 0 7px black;
+    display: block;
+    margin: 0 auto;
 }
 
 .dropdown-menu {
     color: black;
+}
+
+.menu-item {
+    width: 170px;
+    border-radius: 20px;
+    margin: 20px 0px;
+}
+
+.menu-item-link {
+    width: 140px;
+    border-radius: 20px;
+}
+
+.menu-item-button {
+    width: 30px;
+    border-radius: 20px;
+}
+
+.btn-success {
+    background: darkgreen;
 }
