--- a/dimgem/templates/base.html
+++ b/dimgem/templates/base.html
@@ -51,6 +51,11 @@
 			</div>
 			<a class="btn btn-success menu-item" role="button" href="{% url 'search' %}">Szukaj</a>
 			<a class="btn btn-success menu-item" role="button" href="{% url 'contact' %}">Kontakt</a>
+			{% if not user.is_authenticated %}
+				<a class="btn btn-success menu-item" role="button" href="{% url 'log_in' %}">Zaloguj</a>
+			{% else %}
+				<a class="btn btn-success menu-item" role="button" href="{% url 'log_out' %}">Wyloguj</a>
+			{% endif %}
 		</div>
     </div>
     <div id="content">
