--- a/dimgem/templates/base.html
+++ b/dimgem/templates/base.html
@@ -51,7 +51,7 @@
 			</div>
 			<a class="btn btn-success menu-item" role="button" href="{% url 'search' %}">Szukaj</a>
 			<a class="btn btn-success menu-item" role="button" href="{% url 'contact' %}">Kontakt</a>
-			{% if not user.is_authenticated %}
+			{% if not request.user.is_authenticated %}
 				<a class="btn btn-success menu-item" role="button" href="{% url 'log_in' %}">Zaloguj</a>
 			{% else %}
 				<a class="btn btn-success menu-item" role="button" href="{% url 'log_out' %}">Wyloguj</a>
@@ -65,7 +65,7 @@
         {% block footer %}
             <hr style="color: darkgreen">
             <p>Copyright by geodotka 2014. Made in Poland by geodotka. Nie wszystko jest made in China.</p>
-        {% endblock %}
+		{% endblock %}
     </div>
 </body>
 </html>
