--- a/dimgem/templates/posts.html
+++ b/dimgem/templates/posts.html
@@ -4,7 +4,7 @@
         <p>Nie ma jeszcze wpisów w tej kategorii</p>
     {% else %}
         {% for post in posts %}
-            <hr style="color: darkgreen" />
+            <hr />
             <h4 style="color: darkgreen">{{post.posted_date|date:"d.m.Y"}} {{post.author}}: {{post.title}}</h4>
             {{post.text|linebreaks}}
             {% if post.picture %}
@@ -23,5 +23,23 @@
                     {% endif %}
                 {% endif %}
         {% endfor %}
+		<div>
+		{% if is_paginated %}
+			<hr />
+			<div class="pagination">
+				<span class="page-links">
+					{% if page_obj.has_previous %}
+						<a href="{{ path }}?page={{ page_obj.previous_page_number }}">&lsaquo;&lsaquo;</a>
+					{% endif %}
+					<span class="page-current">
+						Strona {{ page_obj.number }} z {{ page_obj.paginator.num_pages }}
+					</span>
+					{% if page_obj.has_next %}
+						<a href="{{ path }}?page={{ page_obj.next_page_number }}">&rsaquo;&rsaquo;</a>
+					{% endif %}
+				</span>
+			</div>
+		{% endif %}
+		</div>
     {% endif %}
 {% endblock %}
