--- a/dimgem/templates/add_post.html
+++ b/dimgem/templates/add_post.html
@@ -1,4 +1,33 @@
 {% extends "base.html" %}
 {% block content %}
-	{{ form }}
+	<form method="post" role="form">
+		{% csrf_token %}
+		<div>
+			{% for field in form %}
+				<div class="form-group">
+					<label for="{{ field.id_for_label }}" class="col-sm-2 control-label">{{ field.label }}</label>
+					{% if field.text %}
+						<textarea class="form-control" rows="3">{{ field }}</textarea>
+					{% else %}
+						{{ field }}
+					{% endif %}
+					{% if field.errors %}
+						{% for error in field.errors %}
+							<span class="text-error">{{ error }}</span>
+						{% endfor %}
+					{% endif %}
+				</div>
+			{% endfor %}
+			<div class="form-group">
+				<label class="col-sm-2 control-label">Autor</label>
+				{{ request.user.username}}
+			</div>
+		</div>
+		<div class="form-group">
+			<div class="col-sm-10">
+				<button type="submit" class="btn btn-default">Zapisz</button>
+			</div>
+		</div>
+	</form>
+	<br>
 {% endblock %}
