--- a/dimgem/templates/base.html
+++ b/dimgem/templates/base.html
@@ -51,8 +51,9 @@
 			</div>
 			<a class="btn btn-success menu-item" role="button" href="{% url 'search' %}">Szukaj</a>
 			<a class="btn btn-success menu-item" role="button" href="{% url 'contact' %}">Kontakt</a>
+			<a class="btn btn-success menu-item" role="button" href="{% url 'add_post' %}">Dodaj post</a>
 			{% if not request.user.is_authenticated %}
-				<a class="btn btn-success menu-item" role="button" href="{% url 'log_in' %}">Zaloguj</a>
+				<a class="btn btn-success menu-item" role="button" href="{% url 'log_in' %}?next={{request.path}}">Zaloguj</a>
 			{% else %}
 				<a class="btn btn-success menu-item" role="button" href="{% url 'log_out' %}">Wyloguj</a>
 			{% endif %}
